sass/_download.scss
body {
    div.download-container {
        h2 {
            margin-block: 0.125em 0.25em;
        }

        p.description {
            margin: 0.35em 0;
        }

        p.info {
            font-size: 12pt;
            line-height: 1.2em;
            margin: 0;

            code {
                font-size: 11pt;
                padding: 3px;
                border-radius: 4px;
            }
        }

        div.button-container {
            display: flex;
            gap: 8px;
        }
    }
}

